Minor additions and optimizations * Added Project link and Scroll to Top btns to home page * Prevent <Link>s from scrolling to bottom of rendered routes * Adjusted some skill proficiencies and added new category * Removed unneeded useEffect * Removed unnecessary comments * Added canonical URLs and meta descriptions * Hide top nav once main page content has reached top of viewport to avoid showing empty gap on top * Globally style links * Minor fixes to types * Removed duplicate instances of certain content wrappers * Decomposed Bio into sections * Styled Related Courses in Education home section

--- a/src/styles/Topbar.module.css
+++ b/src/styles/Topbar.module.css
@@ -86,8 +86,8 @@
     }
 }
 
-.desktopLinks li:not(:last-child) {
-    border-right: 1px solid var(--color-accent);
+.desktopLinks li {
+    border-left: 1px solid var(--color-accent);
 }
 
 .mobileLinks li {
@@ -115,7 +115,7 @@
     display: none;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 800px) {
     .desktopNav {
         display: none;
     }
@@ -139,13 +139,3 @@
         display: block;
     }
 }
-
-/* @media screen and (min-width: 768px) {
-    .mobileNav {
-        display: none;
-    }
-
-    .desktopNav {
-        display: flex;
-    }
-} */
